@@ -13,7 +13,7 @@ use npg::model::instrument;
 use npg::model::user;
 use npg::model::annotation;
 use English qw{-no_match_vars};
-use Test::More tests => 118;
+use Test::More tests => 120;
 use Test::Exception;
 
 use_ok('npg::model::run');
@@ -286,6 +286,35 @@ is($model->id_user(), undef, 'id_user not found by model or current run status')
   is($EVAL_ERROR, q{}, 'created run ok - is_paired with id_run_pair and declared actual_cycle_count');
   ok($model->has_tag_with_value('paired_read'), 'run has paired_read tag');
   ok(!$model->has_tag_with_value('multiplex'), 'run has no multiplex tag');
+}
+
+{
+  my $model = npg::model::run->new({
+				    util                 => $util,
+				    batch_id             => 939,
+				    id_instrument        => 3,
+				    expected_cycle_count => 35,
+				    priority             => 1,
+				    team                 => 'joint',
+				    id_user              => $util->requestor->id_user(),
+				   });
+  eval { $model->create(); };
+  is($EVAL_ERROR, q{}, 'Unpaired run created even if id_run_pair is NULL');
+}
+
+{
+  my $model = npg::model::run->new({
+				    util                 => $util,
+				    batch_id             => 939,
+				    id_instrument        => 3,
+            id_run_pair          => "NO",
+				    expected_cycle_count => 35,
+				    priority             => 1,
+				    team                 => 'joint',
+				    id_user              => $util->requestor->id_user(),
+				   });
+  eval { $model->create(); };
+  is($EVAL_ERROR, q{}, 'Unpaired run created even if id_run_pair is NO (from ClearPress)');
 }
 
 {
