@@ -1,6 +1,7 @@
 CHANGES
 
 - Remove id_run_pair from template. In the run table, make the default 0 and the field not null
+  In model, initialise id_run_pair or a NO value to 0.
 
 release 75.6
  - extended inline index to read 2
